[tool.poetry]
name = "python-intermediate-inflammation"
version = "0.1.0"
description = ""
authors = ["Tim Berry <tdberry@wisc.edu>"]
readme = "README.md"
packages = [{include = "inflammation"}]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.7.1"
numpy = "^1.24.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
